row accessories space between

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
             <!-- ACCESSORIES -->
             <section id="accessories" class="py-1">
                 <div class="container">
-                    <div class="row pb-5">
+                    <div class="row pb-5 justify-content-between">
                         <div class="col-4 col-md-2 border-blue">
-                            <figure>
+                            <figure class="">
                                 <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
                                 <figcaption class="text-center d-none d-md-block">Console PS5</figcaption>
                             </figure>
@@ -515,6 +515,8 @@
                     </div>
                     <div class="col-12 col-md-4 col-lg-2">
                         <ul class="list-unstyled">
+                            <li>Link footer n</li>
+                            <li>Link footer n</li>
                             <li>Link footer n</li>
                             <li>Link footer n</li>
                             <li>Link footer n</li>
