--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <!-- CONSOLE -->
             <section id="console" class="py-5">
                 <div class="container">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col">
                             <h1>Console Playstation 5</h1>
                             <p class="text-secondary">Sperimenta la nuova generazione di incredibili giochi Playstation.
@@ -172,8 +172,8 @@
             </section>
             <!-- ACCESSORIES -->
             <section id="accessories" class="py-1">
-                <div class="container">
-                    <div class="row pb-5 justify-content-between">
+                <div class="container-fluid">
+                    <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
                         <div class="col-4 col-md-2 border-blue">
                             <figure class="">
                                 <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
